--- a/src/view/manageproducts.form
+++ b/src/view/manageproducts.form
@@ -154,6 +154,7 @@
           <SubComponents>
             <Component class="javax.swing.JLabel" name="ProfileIcon">
               <Properties>
+                <Property name="horizontalAlignment" type="int" value="0"/>
                 <Property name="icon" type="javax.swing.Icon" editor="org.netbeans.modules.form.editors2.IconEditor">
                   <Image iconType="3" name="/icons/profile icon.png"/>
                 </Property>
